--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 body{
     background-color: #c9d3da;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
 .navigationimage1{
     display: flex;
@@ -34,26 +36,26 @@ transition-duration: 0.15s;
     border-radius: 50px;
     flex-direction: column;
     background: #e0e0e0;
-    box-shadow: 10px 10px 30px #bebebe15,
+    box-shadow: 10px 10px 30px #bebebe00,
    -20px -20px 60px #ffffff0e;
 }
 
 header{
     font-family: cursive;
     display: flex;
-    background-color: #ffffffda;
+    background-color: #ffffff00;
     border-radius: 10px;
     justify-content: center;
     align-items: center;
-    background: #d1cdcd17;
-    box-shadow: 10px 10px 30px #bebebe17,
-   -20px -20px 60px #ffffff15;
-   color: #c9d3da;
+    background: #d1cdcd00;
+    box-shadow: 10px 10px 30px #0e0d0d00,
+   -20px -20px 60px #ffffff00;
+   color: #fffffff6;
 }
 .navigationdiv{
     display: flex;
     flex-wrap: wrap;
-    background-color: #ffffff31;
+    background-color: #ffffff00;
     justify-content: center;
     align-items: center;
     flex-direction: row;
@@ -62,9 +64,9 @@ header{
     border-radius: 50px;
 }
 .lensonbutton:hover{
-  width: 260px;
+  width: 950px;
   height: 400px;
-  transition-duration: 0.15s;
+  transition-duration: 1.5s;
 }
 .lensonbutton{
 
@@ -74,7 +76,7 @@ header{
     border-radius: 10px;
     flex-wrap: wrap;
     flex-direction: column;
-        width: 250px;
+        width: 900px;
         height: 380px;
         border-radius: 50px;
         background: #e0e0e028;
@@ -236,7 +238,7 @@ header{
   width: 420px;
   border-radius: 50px;
   margin-left: 100px;
-  transition-duration: 0.095s;
+  transition-duration: 1.5s;
 }
   body{
     background-color: #090f14;
