--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,8 @@ transition-duration: 0.15s;
 }
 
 header{
-    font-family: cursive;
+  font-family: 'Rajdhani', sans-serif;
+  font-size: large;
     display: flex;
     background-color: #ffffff00;
     border-radius: 10px;
