--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,8 @@ header{
     box-shadow: 10px 10px 30px #0e0d0d00,
    -20px -20px 60px #ffffff00;
    color: #fffffff6;
+   border: 2px solid rgb(54, 53, 53);
+   background-color: transparent;
 }
 .navigationdiv{
     display: flex;
@@ -64,6 +66,8 @@ header{
     height: 500px;
     margin: 50px;
     border-radius: 50px;
+    border: 2px solid rgb(58, 57, 57);
+    background-color: transparent;
 }
 .lensonbutton:hover{
   width: 950px;
@@ -292,6 +296,7 @@ justify-content: space-around;
     align-items: center;
     justify-content: center;
     justify-content: space-around;
+    border: 4px solid rgb(148, 146, 146);
   }
   .discordlogo{
     width: 100px;
@@ -307,6 +312,7 @@ justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    border: 4px solid rgb(160, 156, 156);
   }
   .instagramlogo{
     width: 100px;
@@ -321,6 +327,7 @@ justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    border: 4px solid rgb(158, 154, 154);
   }
   .twitterlogo{
     width: 100px;
@@ -335,6 +342,7 @@ justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    border: 4px solid rgb(165, 162, 162);
   }
   .numberlogo{
     width: 100px;
@@ -349,6 +357,7 @@ justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    border: 4px solid rgb(155, 152, 152);
   }
   .spotifylogo{
     width: 100px;
@@ -363,6 +372,7 @@ justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    border: 4px solid rgb(146, 143, 143);
   }
   .snapchatlogo{
     width: 100px;
@@ -381,6 +391,7 @@ justify-content: space-around;
     position: relative;
     overflow: hidden;
     outline: 2px solid #2c9caf;
+    border: 2px solid rgb(54, 53, 53);
   }
   
   #socialbutton:hover {
@@ -401,6 +412,7 @@ justify-content: space-around;
     transform: skewX(45deg);
     z-index: -1;
     transition: width 1000ms;
+    border: 2px solid rgb(54, 53, 53);
   }
   
   #socialbutton:hover::before {
@@ -425,6 +437,7 @@ justify-content: space-around;
         -20px -20px 60px #ffffff15;
         margin-left: 325px;
         margin-top: 180px;
+        border: 2px solid rgb(54, 53, 53);
   }
   .backhomebutton{
     width: 450px;
